[package]
name = "keystash"
version = "0.3.7"
edition = "2024"
description = "A secure offline TUI and CLI password manager featuring logical Git sync"
license = "MIT"
repository = "https://github.com/creep-ltx/keystash"
readme = "README.md"
keywords = ["password", "password-manager", "credential", "cli", "tui"]
categories = ["command-line-utilities"]


[dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
chrono = "0.4"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2"
csv = "1.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Limit parallel compilation for maximum LTO optimization
strip = true        # Strip debug symbols and symbol tables


